test/fail/api/string/string_to_i_with_junk.lly
#[
ValueError: Invalid base 10 literal '123abc'.
Traceback:
    File "[builtin]", from string::to_i
    File "string_to_i_with_junk.lly", from __main__ at line 8
]#

"123abc".to_i()
